# BOSSNonAdaptiveEngine

./: .clang-tidy  .gitignore  CMakeLists.txt
Scripts/: runRelease.sh  runTests.sh  updateAndRunTests.sh
Source/: NonAdaptiveEngine.cpp  NonAdaptiveEngine.hpp  config.cpp  config.hpp  engineInstanceState.hpp  join.hpp  memory.hpp
Tests/: BOSSTests.cpp
